# evits_onnx

./: .gitignore  README.md  merge_graph.ipynb  pyproject.toml
evits_onnx/: __init__.py  dp.onnx  model.py  txtdecoder.py  voices.npy
evits_onnx/tools/: attentions.py  commons.py  emotional_vits_onnx_export.py  emotional_vits_onnx_model.py  emotional_vits_onnx_transforms.py
tools/: commons.py  emotional_vits_onnx_model.py  emotional_vits_onnx_modules.py
